# auto-campnet

./: LICENSE.txt  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  codeql-analysis.yml  release.yml
src/: app.module.scss  app.tsx  index.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/json/: configurations.json
src-tauri/src/: main.rs
src/components/credits/: credits.module.scss  credits.tsx
src/components/dataBalance/: dataBalance.module.scss  dataBalance.tsx
src/components/login/: login.module.scss  login.tsx
ui/: index.css  index.html  index.js
